--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <string name="header">Header</string>
     <string name="email">Email</string>
     <string name="home_screen">Home Screen</string>
+    <string name="edit_profile">Edit Profile</string>
+    <string name="save_changes">Save Changes</string>
+    <string name="log_out">Log Out</string>
+    <string name="user_name">User</string>
+    <string name="user_email">Email</string>
+    <string name="user_pass">Password</string>
+    <string name="user">Name User</string>
 </resources>
